--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tanstack/react-query": "^5.32.0",
     "axios": "^1.6.8",
+    "jszip": "^3.10.1",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
