--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,5 +8,11 @@
         "use": "@now/node"
       }
       
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "index.js"
+      }
     ]
   }
